# g20_slam

./: CMakeLists.txt  README.md  demo.txt  edge_se2.cpp  edge_se2.h  main.cpp  plot.py  se2.h  vertex_se2.h
icp/: CMakeLists.txt  icp.cpp  icp.h  icp2d.cpp  icp2d.h  matrix_log.txt  plot.py  test.cpp
src/: main.cpp  vertex_se2.cpp
